:bugs: fix: fixed the pagination on the categories
